<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="login">Login</string>
    <string name="login_name">Login Name</string>
    <string name="password">Password</string>
    <string name="Enable_Switch">Enable Something</string>
    <string name="Button1">Button 1</string>
    <string name="Button2">Button 2</string>
    <string name="Login">Login </string>
    <string name="LoginPassword">Password</string>
    <string name="dialog_message">Do you want to continue</string>
    <string name="dialog_title">411</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ChatButton">Start Chat</string>
    <string name="button3">Send</string>
    <string name="editText"> </string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>
    <string name="CurrentTemp">Current Temperature</string>
    <string name="MinTemp">Minimum Temperature</string>
    <string name="MaxTemp">Maximum Temperature</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="toolbar"> Toolbar </string>
</resources>
