<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jessica.lab1.WeatherForecast"
    tools:showIn="@layout/activity_weather_forecast">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentWeather"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:minHeight="200dp"
        android:minWidth="200dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CurrentTemp"
        android:id="@+id/currentTemp"
        android:layout_below="@+id/currentWeather"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MinTemp"
        android:id="@+id/minTemp"
        android:layout_below="@+id/currentTemp"
        android:layout_alignStart="@+id/currentTemp"
        android:layout_marginTop="83dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MaxTemp"
        android:id="@+id/maxTemp"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/currentTemp"
        android:layout_alignStart="@+id/currentTemp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/minTemp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
